# tool-fabric

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.dfg/: README.md  context-map.yaml  events.jsonl  plan.yaml
.dfg/agents/: W1-1-fix-fabric-lint-version.md
.dfg/retrospectives/W1/: W1-1.md
benchmarks/: README.md  __init__.py  carlos_os_benchmark.py  scale_benchmark.py
benchmarks/data/: confuser_tools.json  new_descriptions.json  old_descriptions.json
benchmarks/results/: carlos_os_results.json  llm_results.json  multi_model_results.json  scale_opus.json  scale_results.json  scale_sonnet.json
docs/: DISCIPLINE-CHANGELOG.md  RELEASE-NOTES.md  VISION.md
examples/carlos-os/: .tool-fabric.yaml  lint-report.md
linter/: __init__.py  checks.py  cli.py
runtime/: __init__.py  enricher.py
spec/: SPEC.md  schema.yaml
tests/: conftest.py  test_benchmark.py  test_checks.py  test_cli.py  test_enricher.py
