[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-fabric"
version = "0.1.0"
description = "Declarative governance for LLM tool registries. Lint your tools like you lint your code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "tools", "agents", "governance", "linter", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
similarity = [
    "sentence-transformers>=2.7",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
    "types-PyYAML",
]

[project.scripts]
fabric-lint = "linter.cli:cli"

[project.urls]
Homepage = "https://github.com/crbazevedo/tool-fabric"
Repository = "https://github.com/crbazevedo/tool-fabric"
Issues = "https://github.com/crbazevedo/tool-fabric/issues"

[tool.hatch.build.targets.wheel]
packages = ["linter", "runtime"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
